--- a/ClinicAppointment/Views/Shared/_Layout.cshtml
+++ b/ClinicAppointment/Views/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Appointments" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Appointments" asp-action="Index">Appointment List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Appointments" asp-action="Create">Create</a>
+                            <a class="nav-link" asp-area="" asp-controller="Payments" asp-action="Index">Transactions</a>
                         </li>
                     </ul>
                 </div>
