Change button on transaction index

--- a/ClinicAppointment/Views/Payments/Index.cshtml
+++ b/ClinicAppointment/Views/Payments/Index.cshtml
@@ -33,5 +33,5 @@
 </div>
 
 <div class="text-center mt-4">
-    <a asp-action="CreatePayment" class="btn" style="background-color: #d37afc; color: white;">Create New Appointment</a>
+    <a asp-action="CreatePayment" class="btn" style="background-color: #d37afc; color: white;">Create Payment</a>
 </div>
