implemented: -generating reports via excel

--- a/ClinicAppointment/Views/Payments/Index.cshtml
+++ b/ClinicAppointment/Views/Payments/Index.cshtml
@@ -35,3 +35,6 @@
 <div class="text-center mt-4">
     <a asp-action="CreatePayment" class="btn" style="background-color: #d37afc; color: white;">Create Payment</a>
 </div>
+<div class="text-center mt-4">
+    <a asp-action="ExportToExcel" asp-controller="Payments" class="btn" style="background-color: #d37afc; color: white;">Generate Transactions</a>
+</div>
